              Ludolf Holzheid (lholzheid@bihl-wiedemann.de).

              pnmtopng: fix bug: output bigger than it needs to be when the
              input is a color format image that contains only gray.  Broken
              since at least 10.26 (May 2001), but after 10.18 (September
              2003).  Thanks Ludolf Holzheid (lholzheid@bihl-wiedemann.de).

              pamtilt: fix bug: incorrect output or invalid memory access
              crash.  Always broken (program was new in Neptbm 10.30
              (October 2005)).

              pnmpsnr: fix bug: says types aren't the same when they are.
              Introduced in 10.61 (December 2012).
              
              ppmtowinicon: fix bug: sometimes creates image truncated in the
              middle of the AND mask.  Always broken (program was new in
              Netpbm 9.3 (June 2000)).

              sparc64 pbmtog3: fix bug that causes crash due to unaligned
              memory access.

              install: fix Perl warning in installnetpbm.  Broken in 10.61.

              build: fix problem with creating lib/util that already exists.
              Broken in 10.62.

12.03.28 BJH  Release 10.62.00

              pnmtorast: set don't care bytes to zero to make output
              repeatable.

              rasttopnm: add -dumpheader, dumpcolormap.

              pamstereogram: change -guidesize default from 10 to 20
              (relevant since 10.61).

              rasttopnm: fix bug: incorrect output due to used-before-set
              variable.  Introduced in 10.56 (September 2011).

              pamstereogram: fix bug: doesn't reject negative guidesize.
              Broken since 10.61.

              pamstereogram: fix bug: garbage in -verbose listing.  Broken
              since 10.61

              MinGW build: various fixes.

12.12.30 BJH  Release 10.61.00

              pgmhist: Add -machine option.

              pgmhist: Add -median, -quartile, and -decile options.
